--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,6 @@
 {
   "recommendations": [
-    "shopify.theme-check-vscode",
+    "shopify.theme-check-vscode"
     // "sissel.shopify-liquid"
   ]
 }
