--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
-  "editor.defaultFormatter": "Shopify.theme-check-vscode",
-  "emmet.includeLanguages": { "liquid": "html" },
+  // "editor.defaultFormatter": "Shopify.theme-check-vscode",
+  "[html]": {
+    "editor.defaultFormatter": "Shopify.theme-check-vscode"
+  },
+  // "emmet.includeLanguages": { "liquid": "html" },
   // "liquid.format": true,
   "html.validate.scripts": false,
   "html.validate.styles": false,
