--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -47,7 +47,7 @@
     "cart_type": "drawer",
     "cart_empty_button_link": "shopify:\/\/collections\/all",
     "cart_show_checkout_button": true,
-    "cart_show_free_shipping_threshold": false,
+    "cart_show_free_shipping_threshold": true,
     "cart_free_shipping_threshold": "30",
     "social_facebook": "https:\/\/www.facebook.com\/vicinitymart",
     "social_twitter": "",
@@ -185,10 +185,20 @@
               "show_newsletter": false,
               "apparition_delay": 3
             }
+          },
+          "b816b770-242e-43c5-b225-104ad791128f": {
+            "type": "survey",
+            "settings": {
+              "ifram_url": "https:\/\/vicinity-app-git-develop-rmanium.vercel.app",
+              "source": "general",
+              "content": "general",
+              "btn_feedback_text": "feedback"
+            }
           }
         },
         "block_order": [
-          "f34e427b-5e37-4e08-9836-4e93a1a1ac21"
+          "f34e427b-5e37-4e08-9836-4e93a1a1ac21",
+          "b816b770-242e-43c5-b225-104ad791128f"
         ],
         "settings": {
         }
@@ -243,15 +253,7 @@
     },
     "content_for_index": [
 
-    ],
-    "blocks": {
-      "14479319785270113485": {
-        "type": "shopify:\/\/apps\/store-pickup-delivery\/blocks\/app-embed\/5599aff0-8af1-473a-a372-ecd72a32b4d5",
-        "disabled": true,
-        "settings": {
-        }
-      }
-    }
+    ]
   },
   "presets": {
     "Metal": {
